--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -48,7 +48,7 @@ spec:
             
 ---
 
-apiVersion: autoscaling/v2
+apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: train-schedule
